
*** HYBRID CHANGELOG
*** Newest entries at top

version hybrid-6-b59   17-Apr-1999
* missing ac2ptr_is_NULL check in m_ltrace
-Rodder
* if client is being spoofed in I line, don't show real IP to non opers
  in trace or stats L
* consistently use 127.0.0.1 for spoofed/oper ip's	
-Dianora
	
version hybrid-6-b58   17-Apr-1999
* SOLARIS7 64bit USERS: this code appears to tickle a bug in gcc and egcs
  ONLY on 64-bit Solaris7.  You must compile on a 32bit kernel, then you
  can run the ircd binary on 32bit or 64bit.  Or reinstall your ircd
  machine as 32bit.  Or buy SunPro C.
* Created NO_JOIN_ON_SPLIT_SIMPLE.  Totally disables the JOIN command
  for non-opers while split.  Doesn't care if the channel existed "before"
  or not.
* server notices are sent to +s clients when entering or leaving "split-mode"
-Rodder

version hybrid-6-b57   28-Mar-1999
* integrated ChangeLog with README.hybrid
* updated Hybrid-team and version.c.SH to reflect the current core team
* updated INSTALL file to match current install_ircd script
* updated all Makefiles with new makedepend info    
* massive cleaning of the doc subdir
* changed defaults in config.h for public consumption
* install_ircd now installs viconf and mkpasswd
* added a couple of ifdefs to help compile under cygwin32b20.1
* added simple.conf to doc directory
* fixed rcs_version string in mtrie_conf.c and s_debug.c
* added SPLIT_PONG...  sends a PING at the end of m_server_estab(),
  checks for PONG from a server before resetting server_was_split.
* commented out malloc-2.6.1 in Makefile.in.  There is a doublefree
  somewhere, which most system mallocs can handle, but this one can't.
* updated m_info in s_serv.c to include all the new defines in config.h
-Rodder
* fixed mtrie_conf.c kline code
-Dianora
	
version hybrid-6-b54   23-Mar-1999
* rewrote kline code (mtrie_conf.c), no more reverse, its faster now
  and ... works
* no more arbritray spoofs. too many complaints, it spoofs as 
  oper.server.name now
-Dianora
